[project]
name = "oculr"
version = "0.1.0"
description = "Biologically inspired environment for active vision"
authors = [
    { name = "Petr Kuderov", email = "pkuderov@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "numpy >=1.23, <2.0",
    "numba >=0.57",
    "gymnasium >= 1.1"
]

[project.optional-dependencies]
torch = ["torch >=2.0"]  # Optional torch support for integration
dev = [
    "matplotlib",
    "jupyterlab"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
